# cascadia_gis

./: .gitignore  Pipfile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
cascadia/: admin.py  apps.py  models.py  settings.py  urls.py  views.py
cascadia/fixtures/: data.json
cascadia/migrations/: 0001_initial.py  0002_map.py
cascadia/templates/cascadia/: city-detail.html  home.html  map-detail.html
data/: import.sh
map/: settings.py  utils.py
