[project]
name = "cascadia_gis"
version = "0.1.0"
description = "Cascadia GIS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "dj-database-url>=2.3.0",
    "django-leaflet>=0.31.0",
    "gdal>=3.7,<3.8",
    "geopy>=2.4.1",
    "gunicorn>=23.0.0",
    "postgis>=1.0.4",
    "psycopg>=3.2.6",
    "whitenoise>=6.9.0",
]

[tool.uv.pip]
index-url = "https://test.pypi.org/simple"

[tool.ruff]
target-version = "py313"
line-length = 127
indent-width = 4
exclude = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# Aspire to include all DJ rules --JLS
# https://pypi.org/project/flake8-django/
# https://docs.djangoproject.com/en/dev/internals/contributing/writing-code/coding-style/#model-style
ignore = ["DJ001", "DJ006", "EM101"]
select = ["E", "F", "W", "UP", "EM", "DJ"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
